--- a/src/index.css
+++ b/src/index.css
@@ -225,12 +225,15 @@ a {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   z-index: 0;
   pointer-events: none;
   overflow: hidden;
 }
+
 
 .liquid-blob {
   position: absolute;
